# dataManager

./: README.md  pyproject.toml
dataManager/: pyproject.toml
dataManager/datamanager/: app.py
