[tool.poetry]
name = "datamanager"
version = "0.1.0"
description = ""
authors = ["mariandamblena <marianodambo@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
streamlit = "^1.36.0"
plotly = "^5.22.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
